--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,5 +1,5 @@
 name: openstack-hypervisor
-version: '2023.1'
+version: '2023.2'
 base: core22
 summary: OpenStack Hypervisor
 description: |
@@ -59,7 +59,7 @@ layout:
 package-repositories:
   - type: apt
     components: [main]
-    suites: [jammy-updates/antelope]
+    suites: [jammy-updates/bobcat]
     key-id: 391A9AA2147192839E9DB0315EDB1B62EC4926EA
     url: http://ubuntu-cloud.archive.canonical.com/ubuntu
 
