Configure TLS for live migration
Configure TLS certificates for Libvirt and QEMU.
Override libvirtd PATH to make sure qemu binary path is not dependent on
snap revision.

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -66,6 +66,9 @@ package-repositories:
 apps:
   # Libvirt
   libvirtd:
+    environment:
+      # overriding usr/bin path to current, to ensure the symlink to qemu-system-* is not dependent on the snap revision 
+      PATH: $SNAP/../current/usr/bin:$SNAP/usr/sbin:$SNAP/usr/bin:$SNAP/sbin:$SNAP/bin:$SNAP/usr/local/bin:$SNAP/usr/local/sbin:$PATH
     command: usr/sbin/libvirtd --pid $SNAP_DATA/libvirt.pid --listen
     daemon: simple
     plugs:
