Update version and suites for Caracal.

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,5 +1,5 @@
 name: openstack-hypervisor
-version: '2023.2'
+version: '2024.1'
 base: core22
 summary: OpenStack Hypervisor
 description: |
@@ -61,7 +61,7 @@ layout:
 package-repositories:
   - type: apt
     components: [main]
-    suites: [jammy-updates/bobcat]
+    suites: [jammy-updates/caracal]
     key-id: 391A9AA2147192839E9DB0315EDB1B62EC4926EA
     url: http://ubuntu-cloud.archive.canonical.com/ubuntu
 
