Enable qemu guest agent usage
Set layout directive to allow usage of qemu guest agent on
openstack-hypervisor

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -55,6 +55,8 @@ layout:
     symlink: $SNAP/usr/share/OVMF
   /usr/share/AAVMF:
     symlink: $SNAP/usr/share/AAVMF
+  /var/lib/libvirt:
+    symlink: $SNAP_DATA/var/lib/libvirt
 
 package-repositories:
   - type: apt
