Add masakari monitor agents
Add new service masakari-instancemonitor.
Add config option masakari.enable to toggle
the service startup.

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,7 @@ console_scripts =
     neutron-ovn-metadata-agent-service = openstack_hypervisor.services:neutron_ovn_metadata_agent
     ceilometer-compute-agent-service = openstack_hypervisor.services:ceilometer_compute_agent
     ovs-exporter-service = openstack_hypervisor.services:ovs_exporter
+    masakari-instancemonitor-service = openstack_hypervisor.services:masakari_instancemonitor
 
 snaphelpers.hooks =
     configure = openstack_hypervisor.hooks:configure
