Add list-nic cli
Add cli capabilities under the snap top-level name. Add a `list-nic`
command to allow the snap returning the nics present, and which are
candidates for being pulled in OVN/OVS.

Signed-off-by: Guillaume Boutry <guillaume.boutry@canonical.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,6 +33,7 @@ console_scripts =
     ceilometer-compute-agent-service = openstack_hypervisor.services:ceilometer_compute_agent
     ovs-exporter-service = openstack_hypervisor.services:ovs_exporter
     masakari-instancemonitor-service = openstack_hypervisor.services:masakari_instancemonitor
+    hypervisor = openstack_hypervisor.cli.main:main
 
 snaphelpers.hooks =
     configure = openstack_hypervisor.hooks:configure
