list-nics: return information about each nic state
Return information about each nic if it's configured, up, and connected.

Signed-off-by: Guillaume Boutry <guillaume.boutry@canonical.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -70,6 +70,9 @@ package-repositories:
 
 apps:
   openstack-hypervisor:
+    environment:
+      # Ensure site packages are loaded first
+      PYTHONPATH: $SNAP/usr/lib/python3.10:$SNAP/usr/lib/python3.10/site-packages:$SNAP/lib/python3.10:$SNAP/lib/python3.10/site-packages:$SNAP/usr/lib/python3/dist-packages::$PYTHONPATH
     command: bin/hypervisor
     plugs:
       - network
