Cleanup unused resources
Remove o_h/model.py, it was supposed to be removed when the API was
removed from the snap.

Remove fastapi dependency.

Fix linters search directories.

Signed-off-by: Guillaume Boutry <guillaume.boutry@canonical.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
 # WARNING: Please ensure that any packages listed here do not overlap with
 #          the payloads requirements.
 # for interacting with snap
-git+https://github.com/albertodonato/snap-helpers#egg=snap-helpers
+snap-helpers @ git+https://github.com/albertodonato/snap-helpers
 jinja2
 
-fastapi
 netifaces
 pydantic
 
