--- a/tox.ini
+++ b/tox.ini
@@ -38,10 +38,8 @@ deps =
     isort
     codespell
 commands =
-    # uncomment the following line if this charm owns a lib
-    # codespell {[vars]lib_path}
-    codespell {toxinidir}/. --skip {toxinidir}/.git --skip {toxinidir}/.tox \
-      --skip {toxinidir}/./.tox --skip {toxinidir}/venv
+    codespell {toxinidir} --skip {toxinidir}/.git --skip {toxinidir}/.tox \
+      --skip {toxinidir}/venv --skip {toxinidir}/.venv
     # pflake8 wrapper supports config from pyproject.toml
     pflake8 {[vars]src_path}
     isort --check-only --diff {[vars]src_path}
